--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 
-title: avalon #Your awesome title
+title: avalon-plan #Your awesome title
 email: carryyan3432@gmail.com #youremail@domain.com
 description: > # this means to ignore newlines until "baseurl"
   Write an awesome description for your new site here. You can edit this
@@ -7,7 +7,7 @@ description: > # this means to ignore newlines until "baseurl"
   Google search results) and in your feed.xml site description.
 
 baseurl: # the subpath of the site
-url: https://carryyan34.github.io # the base hostname & protocol for your site
+url: https://avalon-plan.github.io # the base hostname & protocol for your site
 
 permalink: /:year-:month/:title
 timezone:
@@ -18,10 +18,10 @@ google_analytics: #UA—XXXXXXXX-X
 disqus_shortname: #disqus shortname
 
 user:
-  name: carryyan34
+  name: avalon-plan
   pic: /assets/img/saber.png
-  picAlt: "carryyan"
-  job: a category-centric theme
+  picAlt: "avalon-plan"
+  job: 分享博客
   aboutme: true # comment this out if you don't need the 'about' page.
 
 exclude:
